Increased priority of .invisible class to make sure it overrides other display methods.

--- a/less/main.less
+++ b/less/main.less
@@ -23,7 +23,7 @@ input {
 }
 
 .invisible {
-	display: none;
+	display: none !important;
 }
 
 .list-entry {
